--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,8 @@
-/* Limit image width to avoid overflow the container */
 img {
     max-width: 100%; /* This rule is very important, please do not ignore this! */
-  }
-  
-#canvas {
-  height: 600px;
-  width: 600px;
-  background-color: #ffffff;
-  cursor: default;
-  border: 1px solid black;
+}
+
+canvas {
+    color: yellowgreen;
+    border: 1px solid red;
 }
